--- a/ui-framework-project/package.json
+++ b/ui-framework-project/package.json
@@ -12,7 +12,8 @@
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2",
-    "vux": "^2.9.4"
+    "vux": "^2.9.4",
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
@@ -22,6 +23,7 @@
     "@vux/loader": "^2.0.0-rc4",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "vue-loader": "^14.2.2",
     "vue-template-compiler": "^2.6.10",
     "yaml-loader": "^0.5.0"
   },
