--- a/multi-page-project/package.json
+++ b/multi-page-project/package.json
@@ -18,11 +18,14 @@
     "@vue/cli-plugin-router": "^4.1.0",
     "@vue/cli-plugin-vuex": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
+    "compression": "^1.7.4",
     "compression-webpack-plugin": "^3.1.0",
+    "express": "^4.17.1",
     "glob": "^7.1.6",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "pm2": "^4.2.2",
     "vconsole": "^3.3.4",
     "vue-template-compiler": "^2.6.10",
     "webpack-bundle-analyzer": "^3.6.0"
